[tool.poetry]
name = "image-duplication-check"
version = "0.1.0"
description = ""
authors = ["Romira915 <40430090+Romira915@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
ipykernel = "^6.26.0"
imgsim = "^0.1.2"
torchvision = "^0.16.0"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
